--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>2d_lidar_detection</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="wldnjs0488@gmail.com">cwsfa</maintainer>
+  <maintainer email="wldnjs0488@gmail.com">JiwonYoon</maintainer>
   <license>TODO: License declaration</license>
 
   <test_depend>ament_copyright</test_depend>
